# Arabic-MioTTS-100M

./: pyproject.toml
config/: arabic_lora_train.yaml  lora-06.yaml
data/: create_manifest_single_file.py
data/manifests/: full_wav_txt_report.txt
scripts/: train_arabic.py
