[project]
name = "miotts-inference"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
    "torch",
    "accelerate>=1.12.0",
    "fastapi>=0.111.0",
    "gradio>=4.0.0",
    "httpx>=0.27.0",
    "miocodec",
    "nltk",
    "python-multipart>=0.0.9",
    "soundfile",
    "transformers>=4.40,<5",
    "uvicorn>=0.30.0",
    "ninja>=1.13.0",
    "librosa>=0.11.0",
]

[project.optional-dependencies]
train = [
    "peft>=0.18.1",
    "tensorboard>=2.20.0",
    "matplotlib>=3.10.8",
]

gpu = [
    "xformers>=0.0.35",
]

dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["miotts_server"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.sources]
miotts_inference = { git = "https://github.com/sherif1313/Arabic-MioTTS-100M" }
